--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="/exercise1.js"></script>
+    <!-- <script src="/exercise1.js"></script> -->
+    <script src="exercise2.js"></script>
 </body>
 </html>
