--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <!-- <script src="/exercise1.js"></script> -->
-    <script src="exercise2.js"></script>
+    <!-- <script src="exercise2.js"></script> -->
+    <script src="exercise3.js"></script>
 </body>
 </html>
